@@ -166,6 +166,7 @@ class AVC(SettingPanel):
             pix_fmt=self.widgets.pix_fmt.currentText().split(":")[1].strip(),
             extra=self.ffmpeg_extras,
             tune=tune if tune.lower() != "default" else None,
+            extra_both_passes=self.widgets.extra_both_passes.isChecked(),
         )
 
         if self.mode == "CRF":
@@ -174,7 +175,8 @@ class AVC(SettingPanel):
         else:
             bitrate = self.widgets.bitrate.currentText()
             if bitrate.lower() == "custom":
-                settings.bitrate = self.widgets.custom_bitrate.text()
+                settings.bitrate = self.widgets.custom_bitrate.text().lower().rstrip("k")
+                settings.bitrate += "k"
             else:
                 settings.bitrate = bitrate.split(" ", 1)[0]
         self.app.fastflix.current_video.video_settings.video_encoder_settings = settings
