@@ -8,9 +8,11 @@
 * Adding #152 option to switch back to old bubbly buttons (thanks to GitKike98)
 * Adding logging level selector in settings for GUI
 * Adding button to extract text based subtitles
+* Adding dual pass option for ffmpeg options (thanks to Catatau)
 * Changing all builds to use Python 3.8, removing idea of "legacy" windows until later time
 * Fixing #156 Copy was broken due to ffmpeg extras not being passed (thanks to leonardyan)
 * Fixing #158 Translation and icon of tab name "Quality" lost when output codec switched (thanks to leonardyan)
+* Fixing #120 custom bitrate forgets to add a "k" (thanks to seighail3)
 * Fixing snap packaged, and other symlinked FFmpeg installs were not linked correctly (thanks to Catatau)
 * Fixing loading video could encounter a bug and crash fastflix (thanks to Jan)
 * Fixing being able to set landscape cover
